# beam

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-docs.yml  ci.yml  deploy-pages.yml
beam/: __init__.py
docs/source/: conf.py  index.rst
docs/source/_static/: custom_theme.css
main/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/.doctrees/: environment.pickle  index.doctree
main/.doctrees/apidoc/: beam.doctree  modules.doctree
main/_sources/apidoc/: beam.rst.txt  modules.rst.txt
main/apidoc/: beam.html  modules.html
scripts/: biologic-mpr-example.py
tests/: test_mpr.py
