[build-system]
requires = ["hatchling", "hatch-vcs >= 0.3.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.targets.wheel]
packages = ["datatractor_beam"]

[project]
name = "datatractor-beam"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest"
]

docs = [
    "sphinx ~= 7.2",
    "myst-parser ~= 2.0",
    "sphinx-rtd-theme ~= 1.3",
    "sphinx-autodoc-typehints ~= 1.25",
]

formats = [
    "pandas",
    "xarray",
    "xarray-datatree",
]

dev = [
    "pre-commit"
]

[project.urls]
repository = "https://github.com/datatractor/beam"

[project.scripts]
datatractor = "datatractor_beam:run_datatractor"

[tool.ruff]
extend-exclude = [
    "providers",
]
target-version = "py310"
lint.select = ["E", "F", "I", "W", "Q"]
lint.ignore = ["E501", "E402"]
lint.fixable = ["A", "B", "C", "D", "E", "F", "I"]
lint.unfixable = []
lint.per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
